--- a/hivemind/tavern/test_database_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_database_api_patterns.tavern.yaml
@@ -12,7 +12,7 @@
   stages:
     - name: list_comments
       request:
-        url: "{service.proto:s}://{service.server:s}:{service.port:d}/"
+        url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
         headers:
           content-type: application/json
@@ -43,7 +43,7 @@
   stages:
     - name: find_comments
       request:
-        url: "{service.proto:s}://{service.server:s}:{service.port:d}/"
+        url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
         headers:
           content-type: application/json
