--- a/hivemind/tavern/test_database_api_smoketest.tavern.yaml
+++ b/hivemind/tavern/test_database_api_smoketest.tavern.yaml
@@ -10,7 +10,7 @@
   stages:
     - name: list_comments
       request:
-        url: "{service.proto:s}://{service.server:s}:{service.port:d}/"
+        url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
         headers:
           content-type: application/json
@@ -38,7 +38,7 @@
   stages:
     - name: find_comments
       request:
-        url: "{service.proto:s}://{service.server:s}:{service.port:d}/"
+        url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
         headers:
           content-type: application/json
