--- a/hivemind/tavern/test_smoketest.tavern.yaml
+++ b/hivemind/tavern/test_smoketest.tavern.yaml
@@ -10,7 +10,7 @@
   stages:
     - name: Validate hivemind is running
       request:
-        url: "{service.proto:s}://{service.server:s}:{service.port:d}/"
+        url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
         headers:
           content-type: application/json
