--- a/hivemind/tavern/test_follow_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_follow_api_patterns.tavern.yaml
@@ -120,7 +120,7 @@
   marks:
     - patterntest
     - failing
-    - xfail
+    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout/last_update
 
   includes:
     - !include common.yaml
@@ -178,7 +178,7 @@
   test_name: Hivemind follow_api.get_reblogged_by patterns test
 
   marks:
-    - patterntest
+    - patterntest # result is empty because reblogging functionality started past 5mln blocks
 
   includes:
     - !include common.yaml
