--- a/hivemind/tavern/test_tags_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_tags_api_patterns.tavern.yaml
@@ -4,7 +4,7 @@
   marks:
     - patterntest
     - failing
-    - xfail
+    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout/last_update
 
   includes:
     - !include common.yaml
@@ -35,7 +35,7 @@
   marks:
     - patterntest
     - failing
-    - xfail
+    - xfail # last_payout/last_update
 
   includes:
     - !include common.yaml
@@ -66,7 +66,7 @@
   marks:
     - patterntest
     - failing
-    - xfail
+    - xfail # totally different post
 
   includes:
     - !include common.yaml
@@ -97,7 +97,7 @@
   marks:
     - patterntest
     - failing
-    - xfail
+    - xfail # totally different post
 
   includes:
     - !include common.yaml
@@ -128,7 +128,7 @@
   marks:
     - patterntest
     - failing
-    - xfail
+    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout/last_update
 
   includes:
     - !include common.yaml
@@ -158,8 +158,6 @@
 
   marks:
     - patterntest
-    - failing
-    - xfail
 
   includes:
     - !include common.yaml
@@ -190,7 +188,7 @@
   marks:
     - patterntest
     - failing
-    - xfail
+    - xfail # null result (super long query response)
 
   includes:
     - !include common.yaml
@@ -221,7 +219,7 @@
   marks:
     - patterntest
     - failing
-    - xfail
+    - xfail # last_payout/last_update
 
   includes:
     - !include common.yaml
@@ -252,7 +250,7 @@
   marks:
     - patterntest
     - failing
-    - xfail
+    - xfail # edited votes wrong, influences net_rshares and/or pending_payout_value; last_payout/last_update
 
   includes:
     - !include common.yaml
@@ -282,8 +280,6 @@
 
   marks:
     - patterntest
-    - failing
-    - xfail
 
   includes:
     - !include common.yaml
@@ -313,8 +309,6 @@
 
   marks:
     - patterntest
-    - failing
-    - xfail
 
   includes:
     - !include common.yaml
