Added possibility to ignore given fields in json
- Response validator can now ignore specified fields in
  json response when comparing with patters
- Example in get_profile in bridge_api

--- a/hivemind/tavern/test_bridge_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_bridge_api_patterns.tavern.yaml
@@ -179,6 +179,7 @@
           extra_kwargs:
             method: "get_profile"
             directory: "bridge_api_patterns"
+            ignore_tags: ["id"]
 
 ---
   test_name: Hivemind bridge_api.get_trending_topics patterns test
